--- a/ibms_project/templates/base_ibms.html
+++ b/ibms_project/templates/base_ibms.html
@@ -1,4 +1,4 @@
-{% extends "webtemplate_dbca/base_b4.html" %}
+{% extends "webtemplate_dbca/base_b5.html" %}
 {% load static %}
 
 {% block extra_style %}
@@ -11,32 +11,31 @@
 {% endblock %}
 
 {% block navbar_links %}
-<ul class="navbar-nav ml-auto">
-    {% block navbar_auth %}
+<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+  <span class="navbar-toggler-icon"></span>
+</button>
+<div class="collapse navbar-collapse" id="navbarNavDropdown">
+  <ul class="navbar-nav ms-auto">
     {% if user.is_authenticated %}
-        <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                {% firstof user.get_full_name user.email %} <span class="caret"></span>
-            </a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                {% if user.is_staff %}
-                <a class="dropdown-item" href="{% url 'admin:index' %}">Admin</a>
-                {% if superuser %}
-                <a class="dropdown-item" href="{% url 'clearglpivot' %}">Clear GL Pivot entries</a>
-                {% endif %}
-                <div class="dropdown-divider"></div>
-                {% endif %}
-                <a class="dropdown-item" href="{% url 'logout' %}">Log out</a>
-            </div>
-        </li>
-        {% else %}
-        <li class="nav-item">
-            <a href="{% url 'login' %}">Log in</a>
-        </li>
+    <li class="nav-item dropdown">
+      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+        {% firstof user.get_full_name user.email %} <span class="caret"></span>
+      </a>
+      <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
+        {% if user.is_staff %}
+        <li><a class="dropdown-item" href="{% url 'admin:index' %}">Admin</a></li>
+        {% endif %}
+        {% if superuser %}
+        <li><a class="dropdown-item" href="{% url 'clearglpivot' %}">Clear GL Pivot entries</a></li>
+        {% endif %}
+      </ul>
+    </li>
+    {% else %}
+    <li class="nav-item"><a class="nav-link" id="id_a_login" href="{% url 'login' %}">Log in</a></li>
     {% endif %}
-    {% endblock %}
-</ul>
-{% endblock %}
+  </ul>
+</div>
+{% endblock navbar_links %}
 
 {% block page_content %}
 <div class="container-fluid">
@@ -120,19 +119,20 @@
 <footer class="footer mt-auto py-3">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-sm-6">
+            <div class="col-sm-4 col-xs-12">
                 <small>
                 Version: {{ application_version_no }}
                 </small>
             </div>
-            <div class="col-sm-6">
-                <small class="float-right">&copy; Department of Biodiversity, Conservation and Attractions</small>
+            <div class="col-sm-8 d-none d-sm-block text-end">
+                <small>&copy; Department of Biodiversity, Conservation and Attractions</small>
             </div>
         </div>
     </div>
 </footer>
 {% endblock %}
 
-{% block jquery_version %}
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+{% block base_js %}
+{{ block.super }}
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 {% endblock %}
