--- a/ibms_project/templates/site_home.html
+++ b/ibms_project/templates/site_home.html
@@ -14,7 +14,7 @@
         <div class="col-sm-12 col-md-6 col-lg-5">
             <h4>IBMS WORK INSTRUCTIONS</h4>
             <ul>
-                <li><a href="https://dpaw.sharepoint.com/sites/ibmsusers/Shared Documents/IBMS Documentation/IBMS_BudgetTemplate_Reload Instructions_2021-22.docx">Annual Budget Template Reload Instructions</a></li>
+                <li><a href="https://dpaw.sharepoint.com/sites/ibmsusers/Shared%20Documents/IBMS%20Documentation/IBMS_BudgetTemplate_Reload%20Instructions.docx">Annual Budget Template Reload Instructions</a></li>
                 <li><a href="https://dpaw.sharepoint.com/:w:/s/ibmsusers/EUTOA9bXbxdBoTbIwTwGbVYBUi7vdLdNYcaPprq0xkXJMw?e=6xo9ym">IBMS General Information</a></li>
                 <li><a href="https://dpaw.sharepoint.com/:w:/s/ibmsusers/EUYNRZA0uidNtSlQQOl5bNsB5KYWo5uAveyfHo02S2Gkkw?e=NKMnDj">Code Update / Data Amendment Instructions</a></li>
             </ul>
