--- a/ibms_project/templates/base_ibms.html
+++ b/ibms_project/templates/base_ibms.html
@@ -71,6 +71,9 @@
                         <a class="nav-link" href="{% url 'download' %}">Download</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="{% url 'download_enhanced' %}">Enhanced Download</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="{% url 'reload' %}">Reload</a>
                     </li>
                     <li class="nav-item">
