Update document links on site home page template.

--- a/ibms_project/templates/site_home.html
+++ b/ibms_project/templates/site_home.html
@@ -15,8 +15,8 @@
             <h4>IBMS WORK INSTRUCTIONS</h4>
             <ul>
                 <li><a href="https://dpaw.sharepoint.com/sites/ibmsusers/Shared%20Documents/IBMS%20Documentation/IBMS_BudgetTemplate_Reload%20Instructions.docx">Annual Budget Template Reload Instructions</a></li>
-                <li><a href="https://dpaw.sharepoint.com/:w:/s/ibmsusers/EUTOA9bXbxdBoTbIwTwGbVYBUi7vdLdNYcaPprq0xkXJMw?e=6xo9ym">IBMS General Information</a></li>
-                <li><a href="https://dpaw.sharepoint.com/:w:/s/ibmsusers/EUYNRZA0uidNtSlQQOl5bNsB5KYWo5uAveyfHo02S2Gkkw?e=NKMnDj">Code Update / Data Amendment Instructions</a></li>
+                <li><a href="https://dpaw.sharepoint.com/sites/ibmsusers/Shared%20Documents/IBMS%20Documentation/IBMS_General%20Instructions.docx">IBMS General Information</a></li>
+                <li><a href="https://dpaw.sharepoint.com/sites/ibmsusers/Shared%20Documents/IBMS%20Documentation/IBMS_Code%20Update_Data%20Amendment%20Instructions.docx">Code Update / Data Amendment Instructions</a></li>
             </ul>
             <h4>IBMS USER FOLDERS</h4>
             <ul>
