--- a/ibms_project/templates/base_ibms.html
+++ b/ibms_project/templates/base_ibms.html
@@ -1,141 +1,152 @@
 {% extends "webtemplate_dbca/base_b5.html" %}
 {% load static %}
-
 {% block extra_style %}
-{{ block.super }}
-<style>
+    {{ block.super }}
+    <style>
     .footer {
         background-color: #f5f5f5;
     }
-</style>
+    </style>
 {% endblock %}
-
 {% block navbar_links %}
-<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-  <span class="navbar-toggler-icon"></span>
-</button>
-<div class="collapse navbar-collapse" id="navbarNavDropdown">
-  <ul class="navbar-nav ms-auto">
-    {% if user.is_authenticated %}
-    <li class="nav-item dropdown">
-      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-        {% firstof user.get_full_name user.email %} <span class="caret"></span>
-      </a>
-      <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
-        {% if user.is_staff %}
-        <li><a class="dropdown-item" href="{% url 'admin:index' %}">Admin</a></li>
-        {% endif %}
-        {% if superuser %}
-        <li><a class="dropdown-item" href="{% url 'clearglpivot' %}">Clear GL Pivot entries</a></li>
-        {% endif %}
-      </ul>
-    </li>
-    {% else %}
-    <li class="nav-item"><a class="nav-link" id="id_a_login" href="{% url 'login' %}">Log in</a></li>
-    {% endif %}
-  </ul>
-</div>
+    <button class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNavDropdown"
+            aria-controls="navbarNavDropdown"
+            aria-expanded="false"
+            aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav ms-auto">
+            {% if user.is_authenticated %}
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle"
+                       href="#"
+                       id="navbarDropdownMenuLink"
+                       role="button"
+                       data-bs-toggle="dropdown"
+                       aria-expanded="false">
+                        {% firstof user.get_full_name user.email %} <span class="caret"></span>
+                    </a>
+                    <ul class="dropdown-menu dropdown-menu-end"
+                        aria-labelledby="navbarDropdownMenuLink">
+                        {% if user.is_staff %}
+                            <li>
+                                <a class="dropdown-item" href="{% url 'admin:index' %}">Admin</a>
+                            </li>
+                        {% endif %}
+                        {% if superuser %}
+                            <li>
+                                <a class="dropdown-item" href="{% url 'clearglpivot' %}">Clear GL Pivot entries</a>
+                            </li>
+                        {% endif %}
+                    </ul>
+                </li>
+            {% else %}
+                <li class="nav-item">
+                    <a class="nav-link" id="id_a_login" href="{% url 'login' %}">Log in</a>
+                </li>
+            {% endif %}
+        </ul>
+    </div>
 {% endblock navbar_links %}
-
 {% block page_content %}
-<div class="container-fluid">
-
-    <!-- Messages  -->
-    {% if messages %}
-    <div class="row">
-        <div class="col">
-            {% for message in messages %}
-            <div class="alert{% if message.tags %} alert-{{ message.tags }}{% endif %}">
-                {{ message|safe }}
-            </div>
-            {% endfor %}
-        </div>
-    </div>
-    {% endif %}
-
-    <div class="row">
-        <!-- Sidebar -->
-        {% block sidebar %}
-        <nav class="col-xs-12 col-sm-4 col-md-3 col-lg-2 bg-light sidebar" id="nav_sidebar">
-            <div class="sidebar-sticky">
-                <ul class="nav flex-column">
-                    <h5 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
-                        <span>TOOLS</span>
-                    </h5>
-                    {% if superuser %}
-                    <li class="nav-item">
-                        <a class="nav-link" id="superuser_upload" href="{% url 'upload' %}">Upload</a>
-                    </li>
-                    {% endif %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'download' %}">Download</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'download_enhanced' %}">Enhanced Download</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'reload' %}">Reload</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'code_update' %}">Code Update</a>
-                    </li>
-                    {% if superuser %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'code_update' %}?admin=true">Code Update (Admin)</a>
-                    </li>
-                    {% endif %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'serviceprioritydata' %}">Service Priority data</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'dataamendment' %}">Data Amendment</a>
-                    </li>
-
-                    <h5 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
-                        <span>OUTPUT TOOLS</span>
-                    </h5>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'outcome-entry' %}">Output Entry</a>
-                    </li>
-                    {% if superuser %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'output-upload' %}">Output Upload</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'output-report' %}">Output Report</a>
-                    </li>
-                    {% endif %}
-                </ul>
-            </div>
-        </nav>
-        {% endblock %}
-
-        <!-- Main page content -->
-        <div class="col-xs-12 col-sm-8 col-md-9 col-lg-10" id="div_page_content_inner">
-            {% block page_content_inner %}{% endblock %}
-        </div>
-    </div><!-- /.row -->
-</div><!-- /.container-fluid -->
-{% endblock %}
-
-{% block page_footer %}
-<footer class="footer mt-auto py-3">
     <div class="container-fluid">
-        <div class="row">
-            <div class="col-sm-4 col-xs-12">
-                <small>
-                Version: {{ application_version_no }}
-                </small>
+        <!-- Messages  -->
+        {% if messages %}
+            <div class="row">
+                <div class="col">
+                    {% for message in messages %}
+                        <div class="alert{% if message.tags %} alert-{{ message.tags }}{% endif %}">{{ message|safe }}</div>
+                    {% endfor %}
+                </div>
             </div>
-            <div class="col-sm-8 d-none d-sm-block text-end">
-                <small>&copy; Department of Biodiversity, Conservation and Attractions</small>
+        {% endif %}
+        <div class="row">
+            <!-- Sidebar -->
+            {% block sidebar %}
+                <nav class="col-xs-12 col-sm-4 col-md-3 col-lg-2 bg-light sidebar"
+                     id="nav_sidebar">
+                    <div class="sidebar-sticky">
+                        <ul class="nav flex-column">
+                            <h5 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
+                                <span>TOOLS</span>
+                            </h5>
+                            {% if superuser %}
+                                <li class="nav-item">
+                                    <a class="nav-link" id="superuser_upload" href="{% url 'upload' %}">Upload</a>
+                                </li>
+                            {% endif %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'download' %}">Download</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'download_enhanced' %}">Enhanced Download</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'reload' %}">Reload</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'code_update' %}">Code Update</a>
+                            </li>
+                            {% if superuser %}
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{% url 'code_update_admin' %}">Code Update (Admin)</a>
+                                </li>
+                            {% endif %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'serviceprioritydata' %}">Service Priority data</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'dataamendment' %}">Data Amendment</a>
+                            </li>
+                            <h5 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
+                                <span>OUTPUT TOOLS</span>
+                            </h5>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'outcome-entry' %}">Output Entry</a>
+                            </li>
+                            {% if superuser %}
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{% url 'output-upload' %}">Output Upload</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{% url 'output-report' %}">Output Report</a>
+                                </li>
+                            {% endif %}
+                        </ul>
+                    </div>
+                </nav>
+            {% endblock %}
+            <!-- Main page content -->
+            <div class="col-xs-12 col-sm-8 col-md-9 col-lg-10"
+                 id="div_page_content_inner">
+                {% block page_content_inner %}{% endblock %}
             </div>
         </div>
+        <!-- /.row -->
     </div>
-</footer>
+    <!-- /.container-fluid -->
 {% endblock %}
-
+{% block page_footer %}
+    <footer class="footer mt-auto py-3">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-sm-4 col-xs-12">
+                    <small>Version: {{ application_version_no }}</small>
+                </div>
+                <div class="col-sm-8 d-none d-sm-block text-end">
+                    <small>&copy; Department of Biodiversity, Conservation and Attractions</small>
+                </div>
+            </div>
+        </div>
+    </footer>
+{% endblock %}
 {% block base_js %}
-{{ block.super }}
-<script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    {{ block.super }}
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"
+            integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+            crossorigin="anonymous"></script>
 {% endblock %}
