Code update / data amendment download links.

--- a/ibms_project/ibms/templates/ibms/code_update.html
+++ b/ibms_project/ibms/templates/ibms/code_update.html
@@ -6,7 +6,7 @@
         {% block check_all_button %}{% endblock %}
     </p>
     <p>
-        <a href="{{ sharepoint_ibms }}Shared Documents/IBMS Admin/"
+        <a href="{{ sharepoint_ibms }}Shared Documents/IBMS Admin/IBMS Code Update.xlsx?download=1"
            target="_blank">IBMS Code Update template download</a>
     </p>
 {% endblock %}
