--- a/ibms_project/ibms/templates/ibms/data_amendment.html
+++ b/ibms_project/ibms/templates/ibms/data_amendment.html
@@ -6,7 +6,7 @@
         {% block check_all_button %}{% endblock %}
     </p>
     <p>
-        <a href="{{ sharepoint_ibms }}Shared Documents/IBMS Admin/"
+        <a href="{{ sharepoint_ibms }}Shared Documents/IBMS Admin/IBMS Data Amendment.xlsx?download=1"
            target="_blank">IBMS Data Amendment template download</a>
     </p>
 {% endblock %}
