First pass on new IBM Data list & edit views, add FK to GLPivDownload model.

--- a/ibms_project/templates/base_ibms.html
+++ b/ibms_project/templates/base_ibms.html
@@ -94,7 +94,7 @@
                                 </li>
                             {% endif %}
                             <li class="nav-item">
-                                <a class="nav-link" href="{% url 'dataamendment' %}">Data Amendment</a>
+                                <a class="nav-link" href="{% url 'ibmdata_list' %}">Data Amendment</a>
                             </li>
                             <h5 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
                                 <span>OUTPUT TOOLS</span>
