--- a/ibms_project/templates/logged_out.html
+++ b/ibms_project/templates/logged_out.html
@@ -1,12 +1,13 @@
 {% extends "base_ibms.html" %}
-
 {% block page_content %}
-<div class="container-fluid">
-    <div class="row">
-        <div class="col">
-            <h4>You are now logged out.</h4>
-            <p><a href="{% url 'login' %}">Log in again</a></p>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col">
+                <h4>You are now logged out.</h4>
+                <p>
+                    <a href="{% url 'login' %}">Log in again</a>
+                </p>
+            </div>
         </div>
     </div>
-</div>
 {% endblock %}
