--- a/ibms_project/ibms/templates/ibms/ibmdata_list.html
+++ b/ibms_project/ibms/templates/ibms/ibmdata_list.html
@@ -52,13 +52,9 @@
                                 <td>{{ object.fy }}</td>
                                 <td>{{ object.ibmIdentifier }}</td>
                                 <td>{{ object.costCentre }}</td>
-                                <td>
-                                    {% if object.get_glpivdownload %}{{ object.get_glpivdownload.regionBranch }}{% endif %}
-                                </td>
-                                <td>
-                                    {% if object.get_glpivdownload %}{{ object.get_glpivdownload.service }}{% endif %}
-                                </td>
-                                <td>{{ object.project }}</td>
+                                <td>{{ object.get_region_branch }}</td>
+                                <td>{{ object.get_service_display }}</td>
+                                <td>{{ object.get_project_display }}</td>
                                 <td>{{ object.job }}</td>
                                 <td>{{ object.budgetArea }}</td>
                                 <td>{{ object.projectSponsor }}</td>
