Rename sidebar link.

--- a/ibms_project/templates/base_ibms.html
+++ b/ibms_project/templates/base_ibms.html
@@ -100,7 +100,7 @@
                                 <li class="nav-item">
                                     <a class="nav-link"
                                        id="superuser_download_dept_program"
-                                       href="{% url 'ibms:download_dept_program' %}">Download Department Programs</a>
+                                       href="{% url 'ibms:download_dept_program' %}">Dept Programs Download (Admin)</a>
                                 </li>
                             {% endif %}
                             <li class="nav-item">
