--- a/ibms_project/ibms/templates/ibms/data_amendment_list.html
+++ b/ibms_project/ibms/templates/ibms/data_amendment_list.html
@@ -59,7 +59,7 @@
                                 <td>{{ object.budgetArea }}</td>
                                 <td>{{ object.projectSponsor }}</td>
                                 <td>
-                                    <a href="{% url 'ibms:ibmdata_update' pk=object.pk %}{% if preserved_filters %}?{{ preserved_filters }}{% endif %}"><i class="fa-solid fa-pen-to-square"></i> Edit</a>
+                                    <a href="{% url 'ibms:data_amendment_update' pk=object.pk %}{% if preserved_filters %}?{{ preserved_filters }}{% endif %}"><i class="fa-solid fa-pen-to-square"></i> Edit</a>
                                 </td>
                             </tr>
                         {% endfor %}
